# machine-learning

./: .gitignore  pyproject.toml
fundamentals/aicr/: download_model.py  flaskapp.py  isolation_model.py  model.pkl  register_model.py  service.py  synthetic_health_claims.csv  synthetic_health_claims.py  workflow_diagram.txt
fundamentals/aicr/templates/: index.html  result.html  visualize.html
fundamentals/bentoml/: model_service_v1.py  model_service_v2.py  model_service_v3.py  model_train_v1.py  model_train_v2.py
fundamentals/data-transformation/: data_cleaning.ipynb  data_exploration.ipynb  data_transformation.ipynb  mockdata.py
fundamentals/kafka/: docker-compose.yaml  python-kafka-consumer.py  python-kafka-producer.py  readme.md
fundamentals/mlflow-example/: example_mlflow.py  validation.py
fundamentals/orchestration/: .env  docker-compose.yaml  readme.md
fundamentals/orchestration/dags/: iot_dag.py
sources/: cleaned_data.csv  mock_data.csv  transformed_data.csv
